--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.2
-Flask-Cors==4.0.0
-numpy==1.25.2
-scikit-learn==1.3.0
-requests==2.31.0
+Flask
+flask-cors
+scikit-learn
+numpy
+requests
+setuptools>=42
+wheel
